[project]
name = "livechain"
version = "0.1.0"
description = ""
authors = [{ name = "Brian Yin", email = "toubatbrian@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "livekit-agents",
    "langgraph",
    "langchain-core",
    "python-dotenv",
    "livekit-plugins-deepgram",
    "livekit-plugins-openai",
    "livekit-plugins-silero",
    "livekit-plugins-turn-detector",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"